--- a/src/App.css
+++ b/src/App.css
@@ -28,9 +28,11 @@
 }
 
 .mine {
-  font-family: cursive;
+  display: flex;
+  flex-flow: column;
+  align-items: center;
   background-color: cornflowerblue;
-  color: firebrick;
+  color: #050000;
   }
 
   .myname {
@@ -49,9 +51,11 @@
     color: gray;
     font-family: 'Times New Roman', Times, serif;
     text-align: center;
-    padding: 15px;
   }
 
   .picture{
     
+    border: #222 bold;
+    padding: 0;
+    margin-top: 10px;
   }
